[metadata]
name = tripleo-workflows
summary = A library of TripleO workflows.
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = https://docs.openstack.org/tripleo-workflows/latest/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    tripleo_workflows

data_files =
    share/tripleo-workflows/container-images = container-images/*
    share/tripleo-workflows/workbooks = workbooks/*

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = tripleo_workflows/locale
domain = tripleo-workflows

[update_catalog]
domain = tripleo-workflows
output_dir = tripleo_workflows/locale
input_file = tripleo_workflows/locale/tripleo-workflows.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = tripleo_workflows/locale/tripleo-workflows.pot

[entry_points]
mistral.actions =
    tripleo.baremetal.configure_boot = tripleo_workflows.actions.baremetal:ConfigureBootAction
    tripleo.baremetal.configure_root_device = tripleo_workflows.actions.baremetal:ConfigureRootDeviceAction
    tripleo.baremetal.get_profile = tripleo_workflows.actions.baremetal:GetProfileAction
    tripleo.baremetal.register_or_update_nodes = tripleo_workflows.actions.baremetal:RegisterOrUpdateNodes
    tripleo.baremetal.update_node_capability = tripleo_workflows.actions.baremetal:UpdateNodeCapability
    tripleo.baremetal.cell_v2_discover_hosts = tripleo_workflows.actions.baremetal:CellV2DiscoverHostsAction
    tripleo.baremetal.validate_nodes = tripleo_workflows.actions.baremetal:ValidateNodes
    tripleo.baremetal.get_candidate_nodes = tripleo_workflows.actions.baremetal:GetCandidateNodes
    tripleo.baremetal.probe_node = tripleo_workflows.actions.baremetal:ProbeNode
    tripleo.config.download_config = tripleo_workflows.actions.config:DownloadConfigAction
    tripleo.config.get_overcloud_config = tripleo_workflows.actions.config:GetOvercloudConfig
    tripleo.container_images.prepare = tripleo_workflows.actions.container_images:PrepareContainerImageEnv
    tripleo.deployment.config = tripleo_workflows.actions.deployment:OrchestrationDeployAction
    tripleo.deployment.deploy = tripleo_workflows.actions.deployment:DeployStackAction
    tripleo.deployment.overcloudrc = tripleo_workflows.actions.deployment:OvercloudRcAction
    tripleo.derive_params.convert_number_to_range_list = tripleo_workflows.actions.derive_params:ConvertNumberToRangeListAction
    tripleo.derive_params.convert_range_to_number_list = tripleo_workflows.actions.derive_params:ConvertRangeToNumberListAction
    tripleo.derive_params.get_dpdk_nics_numa_info = tripleo_workflows.actions.derive_params:GetDpdkNicsNumaInfoAction
    tripleo.derive_params.get_dpdk_core_list = tripleo_workflows.actions.derive_params:GetDpdkCoreListAction
    tripleo.derive_params.get_dpdk_socket_memory = tripleo_workflows.actions.derive_params:GetDpdkSocketMemoryAction
    tripleo.derive_params.get_host_cpus_list = tripleo_workflows.actions.derive_params:GetHostCpusListAction
    tripleo.git.clean = tripleo_workflows.actions.vcs:GitCleanupAction
    tripleo.git.clone = tripleo_workflows.actions.vcs:GitCloneAction
    tripleo.heat_capabilities.get = tripleo_workflows.actions.heat_capabilities:GetCapabilitiesAction
    tripleo.heat_capabilities.update = tripleo_workflows.actions.heat_capabilities:UpdateCapabilitiesAction
    tripleo.package_update.update_stack = tripleo_workflows.actions.package_update:UpdateStackAction
    tripleo.parameters.get = tripleo_workflows.actions.parameters:GetParametersAction
    tripleo.parameters.get_flatten = tripleo_workflows.actions.parameters:GetFlattenedParametersAction
    tripleo.parameters.get_network_config = tripleo_workflows.actions.parameters:GetNetworkConfigAction
    tripleo.parameters.reset = tripleo_workflows.actions.parameters:ResetParametersAction
    tripleo.parameters.update = tripleo_workflows.actions.parameters:UpdateParametersAction
    tripleo.parameters.update_role = tripleo_workflows.actions.parameters:UpdateRoleParametersAction
    tripleo.parameters.generate_passwords = tripleo_workflows.actions.parameters:GeneratePasswordsAction
    tripleo.parameters.get_passwords = tripleo_workflows.actions.parameters:GetPasswordsAction
    tripleo.parameters.get_profile_of_flavor = tripleo_workflows.actions.parameters:GetProfileOfFlavorAction
    tripleo.parameters.generate_fencing = tripleo_workflows.actions.parameters:GenerateFencingParametersAction
    tripleo.parameters.rotate_fernet_keys = tripleo_workflows.actions.parameters:RotateFernetKeysAction
    tripleo.plan.create_container = tripleo_workflows.actions.plan:CreateContainerAction
    tripleo.plan.delete = tripleo_workflows.actions.plan:DeletePlanAction
    tripleo.plan.list = tripleo_workflows.actions.plan:ListPlansAction
    tripleo.plan.export = tripleo_workflows.actions.plan:ExportPlanAction
    tripleo.plan.update_from_dir = tripleo_workflows.actions.plan:UpdatePlanFromDirAction
    tripleo.plan.update_networks = tripleo_workflows.actions.plan:UpdateNetworksAction
    tripleo.plan.update_plan_environment = tripleo_workflows.actions.plan:UpdatePlanEnvironmentAction
    tripleo.plan.gather_roles = tripleo_workflows.actions.plan:GatherRolesAction
    tripleo.plan.update_roles = tripleo_workflows.actions.plan:UpdateRolesAction
    tripleo.plan.validate_roles = tripleo_workflows.actions.plan:ValidateRolesDataAction
    tripleo.plan.remove_noop_deploystep = tripleo_workflows.actions.plan:RemoveNoopDeployStepAction
    tripleo.logging_to_swift.format_messages = tripleo_workflows.actions.logging_to_swift:FormatMessagesAction
    tripleo.logging_to_swift.publish_ui_log_to_swift = tripleo_workflows.actions.logging_to_swift:PublishUILogToSwiftAction
    tripleo.logging_to_swift.prepare_log_download = tripleo_workflows.actions.logging_to_swift:PrepareLogDownloadAction
    tripleo.role.list = tripleo_workflows.actions.plan:ListRolesAction
    tripleo.scale.delete_node = tripleo_workflows.actions.scale:ScaleDownAction
    tripleo.swift.tempurl = tripleo_workflows.actions.swifthelper:SwiftTempUrlAction
    tripleo.swift.swift_information = tripleo_workflows.actions.swifthelper:SwiftInformationAction
    tripleo.templates.process = tripleo_workflows.actions.templates:ProcessTemplatesAction
    tripleo.templates.upload = tripleo_workflows.actions.templates:UploadTemplatesAction
    tripleo.templates.upload_plan_environment = tripleo_workflows.actions.templates:UploadPlanEnvironmentAction
    tripleo.validations.check_boot_images = tripleo_workflows.actions.validations:CheckBootImagesAction
    tripleo.validations.check_flavors = tripleo_workflows.actions.validations:CheckFlavorsAction
    tripleo.validations.check_node_boot_configuration = tripleo_workflows.actions.validations:CheckNodeBootConfigurationAction
    tripleo.validations.check_nodes_count = tripleo_workflows.actions.validations:CheckNodesCountAction
    tripleo.validations.get_pubkey = tripleo_workflows.actions.validations:GetPubkeyAction
    tripleo.validations.get_privkey = tripleo_workflows.actions.validations:GetPrivkeyAction
    tripleo.validations.enabled = tripleo_workflows.actions.validations:Enabled
    tripleo.validations.list_groups = tripleo_workflows.actions.validations:ListGroupsAction
    tripleo.validations.list_validations = tripleo_workflows.actions.validations:ListValidationsAction
    tripleo.validations.run_validation = tripleo_workflows.actions.validations:RunValidationAction
    tripleo.validations.verify_profiles = tripleo_workflows.actions.validations:VerifyProfilesAction
    tripleo.files.file_exists = tripleo_workflows.actions.files:FileExists
    tripleo.files.make_temp_dir = tripleo_workflows.actions.files:MakeTempDir
    tripleo.files.remove_temp_dir = tripleo_workflows.actions.files:RemoveTempDir
    tripleo.ansible-generate-inventory = tripleo_workflows.actions.ansible:AnsibleGenerateInventoryAction
    tripleo.undercloud.get_free_space = tripleo_workflows.actions.undercloud:GetFreeSpace
    tripleo.undercloud.create_backup_dir = tripleo_workflows.actions.undercloud:CreateBackupDir
    tripleo.undercloud.create_database_backup = tripleo_workflows.actions.undercloud:CreateDatabaseBackup
    tripleo.undercloud.create_file_system_backup = tripleo_workflows.actions.undercloud:CreateFileSystemBackup
    tripleo.undercloud.upload_backup_to_swift = tripleo_workflows.actions.undercloud:UploadUndercloudBackupToSwift
    tripleo.undercloud.remove_temp_dir = tripleo_workflows.actions.undercloud:RemoveTempDir
    # deprecated for pike release, will be removed in queens
    tripleo.ansible = tripleo_workflows.actions.ansible:AnsibleAction
    tripleo.ansible-playbook = tripleo_workflows.actions.ansible:AnsiblePlaybookAction
    tripleo.templates.upload_default = tripleo_workflows.actions.templates:UploadTemplatesAction

